FenicsPDE/MOND/jupyternbs/dolfin_reports/jitfailure-dolfin_expression_eb56c3e62cb179d3fae0e65795cfb156/error.log
/tmp/tmp0d7wpxwr/dolfin_expression_eb56c3e62cb179d3fae0e65795cfb156.cpp: In member function ‘virtual void dolfin::dolfin_expression_eb56c3e62cb179d3fae0e65795cfb156::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp0d7wpxwr/dolfin_expression_eb56c3e62cb179d3fae0e65795cfb156.cpp:69:80: error: too few arguments to function ‘void dolfin::log(int, std::__cxx11::string, ...)’
           values[0] = sqrt(G*mgb*a)*1/2*log(pow(x[0],2)+pow(x[1],2)+pow(x[2],2));
                                                                                ^
In file included from /usr/local/include/dolfin/common/Array.h:32:0,
                 from /usr/local/include/dolfin/function/Expression.h:27,
                 from /tmp/tmp0d7wpxwr/dolfin_expression_eb56c3e62cb179d3fae0e65795cfb156.cpp:13:
/usr/local/include/dolfin/log/log.h:103:8: note: declared here
   void log(int debug_level, std::string msg, ...);
        ^~~
/tmp/tmp0d7wpxwr/dolfin_expression_eb56c3e62cb179d3fae0e65795cfb156.cpp: In member function ‘virtual double dolfin::dolfin_expression_eb56c3e62cb179d3fae0e65795cfb156::get_property(std::__cxx11::string) const’:
/tmp/tmp0d7wpxwr/dolfin_expression_eb56c3e62cb179d3fae0e65795cfb156.cpp:81:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a") return a;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;
           ^~
/tmp/tmp0d7wpxwr/dolfin_expression_eb56c3e62cb179d3fae0e65795cfb156.cpp:81:47: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a") return a;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;
                                               ^~
